Fix footer color and alignment

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -207,6 +207,12 @@ image-orientation: centered;
 .center {
   text-align: center;
 }
+.social {
+  align-items: center;
+}
+#contact a {
+  color: black;
+}
 </style>
 
 
